sidebar collapse ui fix

--- a/engine/lithium/builder/ui.less
+++ b/engine/lithium/builder/ui.less
@@ -592,7 +592,7 @@ h3.form-divider {
     width: 170px;
     height: 76px;
     position: absolute;
-    top: 75px;
+    top: 110px;
     left: 1%;
   }
 }
@@ -783,7 +783,7 @@ h3.form-divider {
 }
 body.op-sidebar-collapsed{
   #onepager-preview{ width: 100%; margin-left: 0; }
-  .txop-sidebar,
+  .op-sidebar,
   .tx-nav-tabs{ left: -@sidebar-width; }
 }
 
